--- a/css/main.css
+++ b/css/main.css
@@ -26,16 +26,17 @@ a {
 
 /* HEADER */
 #header {
-    margin: 0 auto;
-    width: 1180px;
-    height: 130px;
+    /* margin: 0 auto; */
+    /* height: 130px; */
 }
 
 #header .topmenu {
+    width:1180px; 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 43px;
+    padding-top : 20px;
+    margin : 0 auto;
 }
 
 #header .topmenu .top_left {
@@ -87,55 +88,52 @@ a {
 
 #header .nav {
     display: flex;
-    margin-top: 30px;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+#header .nav.fix {
+    background-color:#fff;
+    position: fixed;
+    top:0;
+    right:0;
+    left:0;
+    border-bottom: 1px solid #EAEAEA;
 }
 
 #header .nav .logo {
-    background-image: url('../img/top_logo.gif');
-    background-repeat: no-repeat;
-    display: inline;
-    z-index: 1000;
+    padding-right : 50px;
+    /* border: 10px solid red; */
 }
 
 #header .nav .gnb {
+    width:900px;
     display: flex;
-    justify-content: center;
-    background: #fff;
-    height: 30px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 75px;
-    overflow: hidden;
-    margin: 0 auto;
-    padding-left: 200px;
-    /* transition: all .3s; */
+    justify-content: space-around;
+    align-items: center;
+    height:80px;
 }
 
-#header .nav .gnb:hover {
+/* #header .nav .gnb:hover {
     height: 300px;
     z-index: 999;
     box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.2);
-}
+} */
 
 #header .nav .gnb .menu_title a {
-    display: block;
-    margin-right: 60px;
+    display: inline-block;
     color: #848484;
     font-weight: 500;
-    /* background-color:tomato; */
 }
 
 #header .nav .gnb .menu_title a span {
-    margin-bottom: 20px;
-    display: block;
     font-weight: 700;
 }
 
 #header .nav .gnb .menu_title li a {
     padding: 10px 0;
     font-size: 13px;
-
 }
 
 /* FOOTER */
