--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ a {
 
 #header .topmenu {
     width:1180px; 
+    /* width:70%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
