--- a/css/reset.css
+++ b/css/reset.css
@@ -5,7 +5,6 @@ span,
 applet,
 object,
 iframe,
-
 h1,
 h2,
 h3,
@@ -15,7 +14,6 @@ h6,
 p,
 blockquote,
 pre,
-
 a,
 abbr,
 acronym,
@@ -23,7 +21,6 @@ address,
 big,
 cite,
 code,
-
 del,
 dfn,
 em,
@@ -33,7 +30,6 @@ kbd,
 q,
 s,
 samp,
-
 small,
 strike,
 strong,
@@ -41,24 +37,20 @@ sub,
 sup,
 tt,
 var,
-
 b,
 u,
 i,
 center,
-
 dl,
 dt,
 dd,
 ol,
 ul,
 li,
-
 fieldset,
 form,
 label,
 legend,
-
 table,
 caption,
 tbody,
@@ -67,26 +59,22 @@ thead,
 tr,
 th,
 td,
-
 article,
 aside,
 canvas,
 details,
 embed,
-
 figure,
 figcaption,
 footer,
 header,
 hgroup,
-
 menu,
 nav,
 output,
 ruby,
 section,
 summary,
-
 time,
 mark,
 audio,
@@ -97,6 +85,7 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
