--- a/css/main.css
+++ b/css/main.css
@@ -27,52 +27,57 @@ a {
 /* HEADER */
 #header {
     position: relative;
-    height: 125px;
+    background-color:yellow;
+    margin-top:20px;
 }
 
-#header .topmenu {
-    width: 1180px;
+#header .top_left {
+    border: 1px solid #000;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    margin: 0 auto;
-    padding-bottom: 20px;
+    /* padding: 10px 0; */
+    width:50%;
+    font-size: 0.75em;
+    background-color: green;
+    font-weight: 900;
 }
 
-#header .topmenu .top_left {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 180px;
-    font-size: 0.8em;
-}
-
-#header .topmenu .top_left li:nth-child(1) {
+#header .top_left li:nth-child(1) {
     border-right: 1px solid rgba(0, 0, 0, 0.2);
     padding-right: 16px;
-    vertical-align: middle;
 }
 
-#header .topmenu .top_right {
+#header .top_left li:nth-child(2) {
+    padding-left: 16px;
+}
+
+#header .top_wrap{
+    /* position:relative; */
+}
+
+#header .top_wrap .top_right {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    background-color:tomato;
+    width:50%;
+    position: absolute;
+    right:0;
+    top:0;
 }
 
-#header .topmenu .top_right li {
+#header .top_wrap .top_right li {
     margin-right: 15px;
-    font-size: 13px;
+    font-size: 0.8rem;
 }
 
-#header .topmenu .top_right li:nth-child(1),
-#header .topmenu .top_right li:nth-child(2) {
+#header .top_wrap .top_right li:nth-child(1),
+#header .top_wrap .top_right li:nth-child(2) {
     border-right: 1px solid rgba(0, 0, 0, 0.2);
     padding-right: 16px;
     vertical-align: middle;
 }
 
-#header .topmenu .top_right li a {
+#header .top_wrap .top_right li a {
     color: #848484;
 }
 
@@ -126,45 +131,9 @@ a {
     display: flex;
     justify-content: space-around;
     background-color: #fff;
+    z-index: 9999;
+    background-color:tomato;
 }
-
-/* =========== toggle ============ */
-
-#header .nav.toggle{
-    /* flex-direction: column; */
-    overflow: visible;
-}
-
-#header .nav .gnb.toggle {  
-    position: fixed;
-    right:0;
-    top:200px;
-    flex-direction: column;  
-    width:85%;
-    background-color:#1D326C;
-    font-size: 0.9rem;
-}
-
-#header .nav .gnb.toggle>li{
-    border-bottom:1px solid #fff;
-    padding:20px;
-    color:#fff;
-    background-color:#1D326C;
-}
-
-#header .nav .gnb.toggle>li a{
-    color:#fff;
-    /* background-color:#1D326C; */
-}
-
-#header .nav .gnb.toggle>li>ul{
-    border:1px solid #fff;
-    display:none;
-    color:#fff;
-    background-color:blue;
-}
-
-/* =========== toggle ============ */
 
 #header .nav .gnb .menu_title li {}
 
