--- a/css/main_header_pad.css
+++ b/css/main_header_pad.css
@@ -1,48 +1,87 @@
 #header {
     margin: 0;
-    height: 80px;
-    background-color:green;
+    height: 90px;
+    padding:0;
+}
+
+#header .logo {
+    top: 20px;
 }
 
 #header .top_left {
-    justify-content: center;
+    justify-content: left;
     border-bottom: 1px solid #eaeaea;
-}
-
-#header .top_wrap {
     width: 100%;
 }
 
+#header .top_left li:nth-child(1),
+#header .top_left li:nth-child(2) {
+    padding: 0 50px;
+}
+
+#header .top_wrap {
+    background-color: green;
+}
+
 #header .top_wrap .top_left {
-    background-color: yellow;
     width: 100%;
 }
 
 #header .nav {
-    padding: 20px;
     justify-content: space-between;
+    height: 20px;
+}
+
+#header .nav:hover {
+    height: 0px;
 }
 
 #header .nav .gnb {
     background-image: url('../img/m_nav_btn.gif');
+    background-repeat: no-repeat;
     font-size: 0;
     width: 26px;
-    /* height: 22px; */
-    top: 0;
+    height: auto;
+    top: 0px;
     right: 20px;
-    z-index: 99999;
+}
+
+#header .top_wrap .top_right>ul:nth-child(2) li a {
+    display: inline-block;
+    background-size: 28px 28px;
+    width: 28px;
+    height: 28px;
+}
+
+#header .top_wrap .top_right>ul:nth-child(2) li:nth-child(1) a {
+    background-image: url("../img/m_top_sns01.gif");
+}
+
+#header .top_wrap .top_right>ul:nth-child(2) li:nth-child(2) a {
+    background-image: url("../img/m_top_sns02.gif");
+}
+
+#header .top_wrap .top_right>ul:nth-child(2) li:nth-child(3) a {
+    background-image: url("../img/m_top_sns03.gif");
+}
+
+#header .top_wrap .top_right>ul:nth-child(2) li:nth-child(4) a {
+    background-image: url("../img/m_top_sns04.gif");
 }
 
 /* =========== toggle ============ */
 
-/* #header .top_wrap.toggle {
+#header .top_wrap.toggle {
     position: fixed;
     top: 0;
     right: 0;
-    width: 80%;
+    bottom: 0;
     height: 100%;
-    background-color: tomato;
-} */
+    width: 70%;
+    background-color: #1D326C;
+    opacity: 1;
+    z-index: 999;
+}
 
 #header .top_wrap .top_right {
     visibility: hidden;
@@ -58,7 +97,7 @@
     height: 50px;
     width: 70%;
     padding: 0 20px;
-    z-index: 9999;
+    z-index: 999;
 }
 
 #header .top_wrap .top_right.toggle>ul:nth-child(1) {
@@ -99,14 +138,21 @@
 }
 
 #header .nav .gnb.toggle>li {
-    border-bottom: 1px solid #fff;
-    padding: 20px;
+    border-top: solid 1px #344a86;
+    border-bottom: solid 1px #203570;
     color: #fff;
     background-color: #1D326C;
 }
 
-#header .nav .gnb .menu_title li {
-    border-bottom: palegoldenrod;
+#header .nav .gnb.toggle>li a {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+#header .nav .gnb.toggle .menu_title li {
+    border-top: solid 1px #344a86;
+    border-bottom: solid 1px #203570;
 }
 
 #header .nav .gnb.toggle>li a {
@@ -118,4 +164,5 @@
     display: none;
     color: #fff;
     background-color: rgb(42, 65, 129);
+    margin: 0;
 }
