--- a/css/main_mobile.css
+++ b/css/main_mobile.css
@@ -1,6 +1,6 @@
 /* 공통 */
 #header {
-    background-color:blue;
+    background-color: red;
 }
 
 #container .line {
@@ -37,7 +37,7 @@
 /* 드림 팩토리 */
 #container .dream_factory {
     flex: none;
-    height: 110vw;
+    height: 130vw;
 }
 
 #container em {
@@ -70,12 +70,13 @@
     margin: 20px auto;
     line-height: 1.5rem;
     text-align: center;
-    width: 35%;
+    width: 32%;
+    font-size: 0.9rem;
 }
 
 /* 메뉴 배너 */
 #container .menu_banner {
-    height: 110vw;
+    height: 130vw;
 }
 
 #container .menu_banner P:nth-child(1) {
@@ -104,17 +105,17 @@
 }
 
 #container .menu_banner .ani_object01 img:nth-child(1) {
-    width: 20%;
+    width: 30%;
     margin: 130px 0 0 120px;
 }
 
 #container .menu_banner .ani_object01 img:nth-child(2) {
-    width: 15%;
+    width: 20%;
     margin: 70px 0 0 80px;
 }
 
 #container .menu_banner .ani_object01 img:nth-child(3) {
-    width: 60%;
+    width: 70%;
 }
 
 #container .menu_banner .ani_object02 img:nth-child(1) {
@@ -123,18 +124,18 @@
 }
 
 #container .menu_banner .ani_object02 img:nth-child(2) {
-    width: 15%;
+    width: 20%;
     left: 120px;
     margin-top: 80px;
 }
 
 #container .menu_banner .ani_object02 img:nth-child(3) {
-    width: 9%;
+    width: 15%;
     left: 200px;
 }
 
 #container .menu_banner .ani_object02 img:nth-child(4) {
-    width: 9%;
+    width: 15%;
     left: 230px;
 }
 
@@ -142,28 +143,24 @@
 #container .franchise {
     background-image: url('../img/company_bg_m.jpg');
     background-position: center;
-    width: 100%;
+    
 }
 
 #container .franchise .franchise_info {
     position: static;
-    margin: 0 auto;
     padding-top: 50px;
-    width: 80%;
+    width: 100%;
 }
 
 #container .franchise .franchise_info p:nth-child(1) {
     font-size: 1.6rem;
     line-height: 35px;
+    text-align: left;
     width: 320px;
-    margin: 0 auto;
 }
 
 #container .franchise .franchise_info p:nth-child(2) {
-    width: 350px;
-    margin: 20px auto;
     text-align: center;
-    margin: 40px auto;
     line-height: 1.5rem;
     text-align: center;
 }
@@ -175,7 +172,7 @@
 
 /* 컬쳐랩 섹션 */
 #container .culture_lab {
-    height: 110vw;
+    height: 130vw;
     width: 100%;
 }
 
@@ -210,7 +207,7 @@
 
 /* 커피랩 섹션 */
 #container .coffee_lab {
-    height: 130vw;
+    height: 150vw;
 }
 
 #container .coffee_lab p:nth-child(1) {
@@ -220,21 +217,18 @@
     font-size: 2rem;
 }
 
-#container .coffee_lab p:nth-child(2) {
-    font-size: 1.2rem;
-    margin-bottom: 0;
-}
-
 #container .coffee_lab .coffee_lab_img {
     width: 100%;
     height: 70vw;
     margin: 40px 0;
 }
 
+
+
 /* 인포 섹션 */
 #container .info {
     width: 100%;
-    height: 130vw;
+    height: 140vw;
 }
 
 #container .info .title {
@@ -302,7 +296,11 @@
 }
 
 /* footer */
-#footer,
+#footer{
+    width: 100%;
+    height:80vw;
+}
+
 #footer .footer_info {
     width: 100%;
 }
