--- a/css/main_header_pad.css
+++ b/css/main_header_pad.css
@@ -5,7 +5,11 @@
 }
 
 #header .logo {
-    top: 20px;
+    top: 40px;
+}
+
+#header .logo.fix{
+    top:10px;
 }
 
 #header .top_left {
@@ -20,7 +24,7 @@
 }
 
 #header .top_wrap {
-    background-color: green;
+    /* background-color: green; */
 }
 
 #header .top_wrap .top_left {
@@ -42,7 +46,7 @@
     font-size: 0;
     width: 26px;
     height: auto;
-    top: 0px;
+    top: 10px;
     right: 20px;
 }
 
@@ -77,7 +81,7 @@
     right: 0;
     bottom: 0;
     height: 100%;
-    width: 70%;
+    width: 80%;
     background-color: #1D326C;
     opacity: 1;
     z-index: 999;
@@ -95,14 +99,14 @@
     right: 0;
     top: 0;
     height: 50px;
-    width: 70%;
+    width: 80%;
     padding: 0 20px;
     z-index: 999;
 }
 
 #header .top_wrap .top_right.toggle>ul:nth-child(1) {
     justify-content: left;
-    width: 70%;
+    width: 80%;
     margin: 0;
     padding: 0;
 }
@@ -131,10 +135,10 @@
     position: fixed;
     right: 0;
     top: 50px;
-    width: 70%;
+    width: 80%;
     font-size: 0.9rem;
     opacity: 1;
-    border: 1px solid lime;
+    /* border: 1px solid lime; */
 }
 
 #header .nav .gnb.toggle>li {
