토글메뉴 모바일 패드에서 위치 수정 및 코드 정리

--- a/css/main_header_pad.css
+++ b/css/main_header_pad.css
@@ -113,13 +113,17 @@
 
 #header .top_wrap .top_right.toggle>ul:nth-child(1) {
     justify-content: left;
-    width: 80%;
+    width: 60%;
     margin: 0;
     padding: 0;
+    /* border:1px solid lime; */
 }
 
 #header .top_wrap .top_right li a {
     color: #fff;
+    /* width:100%; */
+    /* height:100%; */
+    padding:5px 0;
 }
 
 #header .top_wrap .top_right.toggle>ul:nth-child(2) {
