--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,9 @@ a {
     position: fixed;
     top: 70px;
     left: 0;
-    width: 35%;
+    width: 25%;
     z-index: 999;
-    text-align: center;
+    text-align: right;
     margin-left: 20px;
 }
 
@@ -200,13 +200,13 @@ a {
     color: rgba(0, 0, 0, 1)
 }
 
-/* #header .nav .gnb .menu_title li a:hover span:before{
+#header .nav .gnb li a:hover span:before{
     transform: scaleX(1);
-} */
+}
 
 #header .nav .gnb .menu_title a span {
     font-weight: 700;
-    display: block;
+    /* display: block; */
     font-size: 15px;
     color: #333;
     position: relative;
@@ -221,8 +221,8 @@ a {
     width: calc(100% + 2px);
     height: 3px;
     background-color: #000;
-    transform-origin: 0 0;
-    transform: scaleX(1);
+    transform-origin: 50%;
+    transform: scaleX(0);
     transition: transform 0.3s linear;
 }
 
