--- a/css/main_header_pad.css
+++ b/css/main_header_pad.css
@@ -36,14 +36,12 @@
     height: 0px;
 }
 
-#header .nav .gnb {
-    background-image: url('../img/m_nav_btn.gif');
-    background-repeat: no-repeat;
-    font-size: 0;
-    width: 26px;
-    height: auto;
-    top: 10px;
-    right: 20px;
+#header .nav .gnb .menu_title a span:before{
+    display:none;
+}
+
+#header .nav .gnb .menu_title a span {
+    display: none;
 }
 
 #header .top_wrap .top_right>ul:nth-child(2) li a {
@@ -80,7 +78,7 @@
     width: 80%;
     background-color: #1D326C;
     opacity: 1;
-    box-shadow: rgba(0,0,0,0.7) 0 0 0 9999px, rgba(0,0,0,0.2) 2px 2px 3px 3px;
+    box-shadow: rgba(0, 0, 0, 0.7) 0 0 0 9999px, rgba(0, 0, 0, 0.2) 2px 2px 3px 3px;
     z-index: 999;
 }
 
@@ -92,6 +90,20 @@
     top: 8px;
     left: 17%;
     z-index: 999;
+}
+
+#header .top_wrap .toggle_btn {
+    background: url('../img/m_nav_btn.gif');
+    width: 26px;
+    height: 22px;
+    position: fixed;
+    top: 38px;
+    right: 10px;
+    z-index: 999;
+}
+
+#header .top_wrap .toggle_btn.fix {
+    top: 10px;
 }
 
 #header .top_wrap .top_right {
@@ -120,7 +132,7 @@
 
 #header .top_wrap .top_right li a {
     color: #fff;
-    padding:5px 0;
+    padding: 5px 0;
 }
 
 #header .top_wrap .top_right.toggle>ul:nth-child(2) {
@@ -150,9 +162,13 @@
 
 #header .nav .gnb.toggle>li {
     border-top: solid 1px #344a86;
-    border-bottom: solid 1px #203570;
-    color: #fff;
+    border-bottom: solid 1px #203570;  
     background-color: #1D326C;
+}
+
+#header .nav .gnb.toggle .menu_title a span {
+    display: block;
+    color: #fff;
 }
 
 #header .nav .gnb.toggle>li a {
